# rust-gpu-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  default.nix
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
ash-graphics/: Cargo.toml  Cargo.toml.liquid  cargo-generate.toml
ash-graphics/ash-graphics/: Cargo.toml  Cargo.toml.liquid  build.rs  build.rs.liquid
ash-graphics/ash-graphics-shaders/: Cargo.toml
ash-graphics/ash-graphics-shaders/src/: lib.rs
ash-graphics/ash-graphics/src/: graphics.rs  main.rs
graphics/: Cargo.toml.liquid  cargo-generate.toml
graphics/ash/: Cargo.toml.liquid  build.rs.liquid
graphics/ash-graphics/src/: swapchain.rs
graphics/mygraphics/: Cargo.toml  Cargo.toml.liquid  build.rs  build.rs.liquid
graphics/mygraphics-shaders/: Cargo.toml
graphics/mygraphics-shaders/src/: lib.rs
graphics/mygraphics/src/: lib.rs  lib.rs.liquid  main.rs  main.rs.liquid
graphics/mygraphics/src/ash_renderer/: global_descriptor_set.rs  graphics.rs  mod.rs  render_pipeline.rs  renderer.rs  swapchain.rs
graphics/mygraphics/src/wgpu_renderer/: app.rs  mod.rs  render_pipeline.rs  state.rs  swapchain.rs
xtask/: Cargo.toml
xtask/src/: cargo_generate_config.rs  generate.rs  main.rs
