[package]
name = "xtask"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
cargo-generate = { version = "0.23.7", default-features = false, features = [] }
