[package]
name = "xtask"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"

# deps below are copied from `cargo-generate`
cargo-generate = { version = "0.23.7", default-features = false, features = [] }
serde = { version = "~1.0", features = ["derive"] }
toml = { version = "~0.9", features = ["preserve_order"] }
indexmap = { version = "~2", features = ["serde"] }
